--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         <div style="display: flex; align-items: center; justify-content: space-between;">
             <h3>筆記</h3>
             <div>
-                <button onclick="clearAllNotes()" style="padding: 5px 10px; font-size: 14px; border: none; background: #dc3545; color: white; border-radius: 5px; cursor: pointer;">
-                    清除所有筆記 🗑
+                <button onclick="clearAllNotes()" id="clearNoteButton" class="note-button">
+                    Deletenote
                 </button>
-                <button onclick="saveNote()" id="saveNoteButton" style="padding: 5px 10px; font-size: 14px; border: none; background: #007bff; color: white; border-radius: 5px; cursor: pointer;">
-                    保存筆記
+                <button onclick="saveNote()" id="saveNoteButton" class="note-button">
+                    Savenote
                 </button>
             </div>
         </div>
