--- a/index.html
+++ b/index.html
@@ -59,25 +59,27 @@
         </div>
 
         <!-- 2️⃣ 筆記按鈕 -->
-        <div style="display: flex; align-items: center; justify-content: space-between;">
-            <h3>筆記</h3>
-            <div>
-                <button onclick="clearAllNotes()" id="clearNoteButton" class="note-button">
-                    Deletenote
-                </button>
-                <button onclick="saveNote()" id="saveNoteButton" class="note-button">
-                    Savenote
-                </button>
+         <div style="display: flex; align-items: center; justify-content: space-between;">
+                <h3>筆記</h3>
+                <div>
+                    <button onclick="clearAllNotes()" id="clearNoteButton" class="note-button">Deletenote</button>
+                    <button onclick="saveNote()" id="saveNoteButton" class="note-button">Savenote</button>
+                </div>
+            </div>
+
+            <div id="noteContainer">
+                <textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 80px;"></textarea>
+                <p id="savedNote"></p>
+            </div>
+
+            <!-- 添加匯出與匯入按鈕 -->
+            <div id="storageButtons">
+                <button onclick="exportAllData()">📅 匯出學習資料</button>
+                <input type="file" id="importFile" accept=".json" style="display: none;">
+                <button onclick="importAllData()">📄 匯入學習資料</button>
             </div>
         </div>
-
-        <!-- 1️⃣ 筆記內容（放在最下方） -->
-        <div id="noteContainer">
-            <textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 100px;"></textarea>
-            <p id="savedNote"></p>
-        </div>
     </div>
-</div>
 
     <script>
 let historyStack = []; // 記錄所有歷史狀態
@@ -551,6 +553,50 @@ document.addEventListener("DOMContentLoaded", () => {
         }
     }, 500); // 延遲 500ms，確保 `wordTitle` 已載入
 });
+
+function exportAllData() {
+    let allData = { ...localStorage }; // 取得所有 `localStorage` 資料
+    let dataStr = "data:text/json;charset=utf-8," + encodeURIComponent(JSON.stringify(allData, null, 2));
+    
+    let downloadAnchor = document.createElement("a");
+    downloadAnchor.setAttribute("href", dataStr);
+    downloadAnchor.setAttribute("download", "localStorage_backup.json");
+    document.body.appendChild(downloadAnchor);
+    downloadAnchor.click();
+    downloadAnchor.remove();
+
+    alert("✅ 學習資料已匯出！");
+    console.log("✅ 所有 `localStorage` 資料已匯出！", allData);
+}
+
+function importAllData() {
+    let fileInput = document.createElement("input");
+    fileInput.type = "file";
+    fileInput.accept = ".json";
+    fileInput.onchange = function (event) {
+        let file = event.target.files[0];
+        if (!file) return;
+
+        let reader = new FileReader();
+        reader.onload = function (event) {
+            let importedData = JSON.parse(event.target.result);
+
+            // 📌 清除原本的 `localStorage`，確保資料乾淨
+            localStorage.clear();
+
+            // 📌 把 JSON 內的資料存回 `localStorage`
+            Object.keys(importedData).forEach(key => {
+                localStorage.setItem(key, importedData[key]);
+            });
+
+            alert("✅ `localStorage` 已成功匯入！");
+            console.log("📌 已還原 `localStorage` 資料:", importedData);
+            location.reload(); // 重新載入頁面，確保變更生效
+        };
+        reader.readAsText(file);
+    };
+    fileInput.click();
+}
 
 
 </script>
