--- a/index.html
+++ b/index.html
@@ -349,13 +349,17 @@ function showWords(type, value) {
         filteredWords.forEach(word => {
             let wordText = word.Words || word.word || word["單字"];
             let isChecked = localStorage.getItem(`checked_${wordText}`) === "true"; // 檢查是否已 Check
-            
+
+            let iconSrc = isChecked 
+                ? "https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/checked-icon.svg"
+                : "https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/check-icon.svg";
+
             let item = document.createElement('div');
             item.className = 'word-item-container';
             item.innerHTML = `
                 <p class='word-item' onclick='showDetails(${JSON.stringify(word)})'>${wordText}</p>
                 <button class='check-button' onclick='toggleCheck("${wordText}", this)'>
-                    ${isChecked ? "✔️ Checked" : "✅ Check"}
+                    <img src="${iconSrc}" class="check-icon" alt="Check" width="24" height="24">
                 </button>
             `;
 
@@ -373,17 +377,19 @@ function showWords(type, value) {
 // 2️⃣ 放在 `showWords()` 之後，處理按鈕點擊事件
 function toggleCheck(word, button) {
     let isChecked = localStorage.getItem(`checked_${word}`) === "true";
+    let icon = button.querySelector("img");
 
     if (isChecked) {
         localStorage.removeItem(`checked_${word}`); // 取消記錄
-        button.textContent = "✅ Check"; // 按鈕回到未選狀態
+        icon.src = "https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/check-icon.svg"; // 回復未選狀態
     } else {
         localStorage.setItem(`checked_${word}`, "true"); // 記錄為已學會
-        button.textContent = "✔️ Checked"; // 按鈕顯示「已選」
+        icon.src = "https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/checked-icon.svg"; // 變成已選
     }
 
     console.log(`📌 單字 ${word} 的狀態已更新：`, localStorage.getItem(`checked_${word}`));
 }
+
 
 
 function backToFirstLayer() {
