--- a/index.html
+++ b/index.html
@@ -378,19 +378,23 @@ function showWords(type, value) {
 function toggleCheck(word, button) {
     let isChecked = localStorage.getItem(`checked_${word}`) === "true";
     let icon = button.querySelector("img");
+    let wordItemContainer = button.closest(".word-item-container"); // 找到對應的單字容器
 
     if (isChecked) {
-        localStorage.removeItem(`checked_${word}`); // 取消記錄
-        icon.src = "https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/check-icon.svg"; // 回復未選狀態
-        button.classList.remove("checked"); // 移除已選類別
+        localStorage.removeItem(`checked_${word}`);
+        icon.src = "https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/check-icon.svg";
+        button.classList.remove("checked");
+        wordItemContainer.classList.remove("checked"); // 取消縮小效果
     } else {
-        localStorage.setItem(`checked_${word}`, "true"); // 記錄為已學會
-        icon.src = "https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/checked-icon.svg"; // 變成已選
-        button.classList.add("checked"); // 添加已選類別
+        localStorage.setItem(`checked_${word}`, "true");
+        icon.src = "https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/checked-icon.svg";
+        button.classList.add("checked");
+        wordItemContainer.classList.add("checked"); // 加上縮小效果
     }
 
     console.log(`📌 單字 ${word} 的狀態已更新：`, localStorage.getItem(`checked_${word}`));
 }
+
 
 
 
