--- a/quize.html
+++ b/quize.html
@@ -20,13 +20,14 @@
     <div class="container">
         <!-- 測驗分類區 -->
         <div id="quizCategories" style="display: none;">
-            <h2>選擇測驗分類</h2>
-            <button class="back-button" onclick="returnToMainMenu()">Back</button>
-            <div class="alphabet-container" id="alphabetButtons"></div>
-            <div class="category-container" id="categoryButtons"></div>
-            <div class="level-container" id="levelButtons"></div>
-            <div id="checkedCategory"></div>
-        </div>
+           <h2>選擇測驗分類</h2>
+           <button class="back-button" onclick="returnToMainMenu()">Back</button>
+           <div class="alphabet-container" id="alphabetButtons"></div>
+           <div class="category-container" id="categoryButtons"></div>
+           <div class="level-container" id="levelButtons"></div>
+           <div id="checkedCategory"></div>
+           <button id="startFilteredQuizBtn" class="button">開始測驗</button> <!-- 新增的開始測驗按鈕 -->
+         </div>
 
         <!-- 測驗區 -->
         <div id="quizArea" style="display: none;">
