--- a/index.html
+++ b/index.html
@@ -695,6 +695,40 @@ function importAllData() {
     fileInput.click();
 }
 
+// 從 URL 取得單字參數
+function getWordFromURL() {
+    let params = new URLSearchParams(window.location.search);
+    return params.get('word');
+}
+
+// 在 JSON 載入完成後顯示詳情
+function displayWordDetailsFromURL() {
+    let wordName = getWordFromURL();
+    if (!wordName) return; // 如果沒有傳遞單字參數，則不執行任何動作
+
+    // 查找對應單字資料
+    let wordData = wordsData.find(w => w.Words.toLowerCase() === wordName.toLowerCase());
+    if (wordData) {
+        showDetails(wordData); // 呼叫原有函數顯示詳情
+    } else {
+        console.warn("❌ 找不到對應單字資料！");
+    }
+}
+
+// 修改 JSON 載入成功後的程式碼，確保自動顯示詳情
+document.addEventListener("DOMContentLoaded", function () {
+    fetch("https://boydyang-designer.github.io/English-vocabulary/Z_total_words.json")
+        .then(res => res.json())
+        .then(data => {
+            wordsData = data["New Words"] || [];
+            console.log("✅ JSON 資料已成功載入");
+
+            // 資料載入完成後，檢查 URL 是否有單字參數並顯示詳情
+            displayWordDetailsFromURL();
+        })
+        .catch(err => console.error("❌ 讀取 JSON 失敗:", err));
+});
+
 
 </script>
 </body>
