--- a/quize.html
+++ b/quize.html
@@ -47,9 +47,6 @@
     <!-- 測驗結果 -->
 <div id="quizResult" style="display: none;">
     <h2>測驗結果統計</h2>
-    <p>總測驗數: <span id="totalWords"></span></p>
-    <p>答對數: <span id="correctWords"></span></p>
-    <p>答錯數: <span id="wrongWords"></span></p>
     
     <!-- 按鈕群組排列 -->
     <div class="button-group">
@@ -69,5 +66,41 @@
 
 
     <script src="quize.js"></script>
+
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+    let params = new URLSearchParams(window.location.search);
+    if (params.get('returning') === 'true') {
+        // 從 localStorage 讀取滾動位置
+        let scrollPosition = localStorage.getItem('quizScrollPosition');
+        
+        // 顯示測驗結果區塊並隱藏其他部分
+        document.getElementById("quizResult").style.display = "block";
+        document.getElementById("mainMenu").style.display = "none";
+        document.getElementById("quizCategories").style.display = "none";
+        document.getElementById("quizArea").style.display = "none";
+        document.getElementById("reviewSection").style.display = "none";
+
+        // 恢復滾動位置
+        if (scrollPosition) {
+            let resultContainer = document.getElementById("quizResult");
+            if (resultContainer) {
+                resultContainer.scrollTop = parseInt(scrollPosition);
+                console.log("🔄 測驗結果已恢復到上次位置");
+            }
+        }
+
+        // ✅ 恢復測驗結果
+        let savedResults = localStorage.getItem('currentQuizResults');
+        if (savedResults) {
+            quizResults = JSON.parse(savedResults);
+            console.log("✅ 測驗結果已恢復", quizResults);
+            restoreQuizResults(); // 呼叫函數重新顯示測驗結果
+        }
+    }
+});
+</script>
+
+
 </body>
 </html>
